@@ -605,6 +605,122 @@ name|float
 name|progress
 parameter_list|)
 block|{
+if|if
+condition|(
+name|Float
+operator|.
+name|isNaN
+argument_list|(
+name|progress
+argument_list|)
+condition|)
+block|{
+name|progress
+operator|=
+literal|0
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Illegal progress value found, progress is Float.NaN. "
+operator|+
+literal|"Progress will be changed to 0"
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|progress
+operator|==
+name|Float
+operator|.
+name|NEGATIVE_INFINITY
+condition|)
+block|{
+name|progress
+operator|=
+literal|0
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Illegal progress value found, progress is "
+operator|+
+literal|"Float.NEGATIVE_INFINITY. Progress will be changed to 0"
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|progress
+operator|<
+literal|0
+condition|)
+block|{
+name|progress
+operator|=
+literal|0
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Illegal progress value found, progress is less than 0."
+operator|+
+literal|" Progress will be changed to 0"
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|progress
+operator|>
+literal|1
+condition|)
+block|{
+name|progress
+operator|=
+literal|1
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Illegal progress value found, progress is larger than 1."
+operator|+
+literal|" Progress will be changed to 1"
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|progress
+operator|==
+name|Float
+operator|.
+name|POSITIVE_INFINITY
+condition|)
+block|{
+name|progress
+operator|=
+literal|1
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Illegal progress value found, progress is "
+operator|+
+literal|"Float.POSITIVE_INFINITY. Progress will be changed to 1"
+argument_list|)
+expr_stmt|;
+block|}
 name|this
 operator|.
 name|progress
