@@ -147,6 +147,9 @@ Release 2.5.0 - UNRELEASED
 
   IMPROVEMENTS
 
+    MAPREDUCE-5671. NaN can be created by client and assign to Progress (Chen
+    He via jeagles)
+
   OPTIMIZATIONS
 
   BUG FIXES 
